--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
                     <li>Отзывы</li>
                     <li>Контакты</li>
                 </ul>
-            </div>
+            </div><!-- menu -->
         </nav>
     </header>
 
@@ -39,7 +39,7 @@
             <input type="submit" value="Мои работы">
         </div>
         <img src="#" alt="фон1" class="background_1">
-    </div>
+    </div> <!-- main -->
 
     <div class="about_me">
         <h2>Обо мне</h2>
@@ -50,7 +50,7 @@
             <img src="#" alt="icon_download">
             <p class="dowload"><a href="#" dowload>Скачать резюме</a></p>
         </div>
-    </div>
+    </div><!-- about_me -->
 
     <div class="section_1">
         <img src="#" alt="background_2">
@@ -59,26 +59,26 @@
             <img src="#" alt="Иконка Веб-дизайн" class="icon_section_1">
             <p class="chapter_section_1">Веб-дизайн</p>
             <p class="text_section_1">Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
-        </div>
+        </div><!-- web -->
 
         <div class="develop">
             <img src="#" alt="Иконка Разработка" class="icon_section_1">
             <p class="chapter_section_1">Разработка</p>
             <p class="text_section_1">Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
-        </div>
+        </div><!-- develop -->
 
         <div class="ceo">
             <img src="#" alt="Иконка CEO-Оптимизация" class="icon_section_1">
             <p class="chapter_section_1">CEO-Оптимизация</p>
             <p class="text_section_1">Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
-        </div>
+        </div><!-- ceo -->
 
         <div class="market">
             <img src="#" alt="Иконка Маркетинг" class="icon_section_1">
             <p class="chapter_section_1">Маркетинг</p>
             <p class="text_section_1">Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
-        </div>
-    </div>
+        </div><!-- market -->
+    </div><!-- section_1 -->
 
     <div class="section_2">
         <h2>Кейсы</h2>
@@ -94,12 +94,13 @@
             <form action="#" target="_blank">
                 <button>Visit live site</button>
             </form>
-        </div>
+        </div><!-- website -->
+    </div><!-- section_2 -->
 
-        <div class="section_3">
-            <h2>Расчет стоимости</h2>
-            <p class="calculation">Тип сайта</p>
-            <select name="type">
+    <div class="section_3">
+        <h2>Расчет стоимости</h2>
+        <p class="calculation">Тип сайта</p>
+        <select name="type">
                 <option value="opt1">Option 1</option>
                 <option value="opt2">Option 2</option>
                 <option value="opt3">Option 3</option>
@@ -122,9 +123,9 @@
                 <p>Сроки</p>
                 <p>Стоимость</p>
             </div>
-        </div>
+    </div><!-- section_3 -->
 
-        <div class="section_4">
+    <div class="section_4">
             <img src="#" alt="background_3">
             <h2>Немного статистики</h2>
 
@@ -151,15 +152,16 @@
                 <p class="chapter_section_4">23</p>
                 <p class="text_section_1">Наград получено</p>
             </div>
-        </div>
+    </div><!-- section_4 -->
 
-        <div class="section_5">
+    <div class="section_5">
             <div class="comment_1">
                 <img src="#" alt="Фото">
                 <p class="text_comment">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at duis sed dapidus leo nec ornare diam.</p>
                 <p class="name_comment">Михаил, Ген директор ПАО “Газпром”.</p>
             </div>
         </div>
+    </div><!-- section_5 -->
 
         <footer>
             <img src="#" alt="background_footer">
@@ -179,15 +181,18 @@
                 <img src="#" alt="Значок Телефон">
                 <p class="tel"><a href="tel:+7 999 999-99-99">+7 999 999-99-99</a></p>
             </div>
+
             <p class="message">Оставьте мне сообщение</p>
+
             <form action="#">
                 <input type="text" placeholder="Имя">
                 <input type="email" placeholder="Email">
-                <input type="text" placeholder="Сообщение">
+                <textarea placeholder="Сообщение"></textarea>
                 <button>
                     Отправить
                 </button>
             </form>
+
             <div>
                 <img src="#" alt="Иконка FB">
                 <img src="#" alt="Иконка твитер">
@@ -196,14 +201,14 @@
                 <img src="#" alt="Иконка инстаграм">
                 <img src="#" alt="Иконка in">
             </div>
+
             <div class="map"> <!-- JS -->
                 <p>I'm here</p>
             </div>
+
             <div class="copyright">
                 <p>Copyright © 2021 Антон Полищук. Design by Web</p>
             </div>
         </footer>
-
 </body>
-
 </html>
