Исправил атрибут download. Исправил телефон.
Исправил опечатку dowload на download. Убрал в номере телефона пробелы.

--- a/src/index.html
+++ b/src/index.html
@@ -6,15 +6,10 @@
     <meta name="description" content="Это моя первая страница">
     <meta name="author" content="Anton">
     <meta name="robots" content='all'>
-
-
-
-
     <title>Антон Полищук - Веб-разработчик</title>
 </head>
 
 <body>
-
     <header>
         <nav>
             <div class="logo">Антон Полищук</div>
@@ -27,63 +22,45 @@
                     <li>Отзывы</li>
                     <li>Контакты</li>
                 </ul>
-            </div><!-- menu -->
+            </div>
         </nav>
     </header>
-
     <div class="main">
         <div class="title_container">
             <h1>Привет <br> Я Антон Полищук</h1>
             <h4>Фулл стэк веб-разработчик</h4>
             <input type="submit" value="Обо мне">
-            <input type="submit" value="Мои работы">
-        </div>
-        <img src="#" alt="фон1" class="background_1">
-    </div> <!-- main -->
-
+            <input type="submit" value="Мои работы"> </div> <img src="#" alt="фон1" class="background_1"> </div>
     <div class="about_me">
-        <h2>Обо мне</h2>
-        <img src="#" alt="avatar" class="avatar">
+        <h2>Обо мне</h2> <img src="#" alt="avatar" class="avatar">
         <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh.</p>
         <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh.</p>
-        <div>
-            <img src="#" alt="icon_download">
-            <p class="dowload"><a href="#" dowload>Скачать резюме</a></p>
+        <div> <img src="#" alt="icon_download">
+            <p class="download"><a href="#" download>Скачать резюме</a></p>
         </div>
-    </div><!-- about_me -->
-
-    <div class="section_1">
-        <img src="#" alt="background_2">
+    </div>
+    <div class="section_1"> <img src="#" alt="background_2">
         <h2>Что я умею</h2>
-        <div class="web">
-            <img src="#" alt="Иконка Веб-дизайн" class="icon_section_1">
+        <div class="web"> <img src="#" alt="Иконка Веб-дизайн" class="icon_section_1">
             <p class="chapter_section_1">Веб-дизайн</p>
             <p class="text_section_1">Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
-        </div><!-- web -->
-
-        <div class="develop">
-            <img src="#" alt="Иконка Разработка" class="icon_section_1">
+        </div>
+        <div class="develop"> <img src="#" alt="Иконка Разработка" class="icon_section_1">
             <p class="chapter_section_1">Разработка</p>
             <p class="text_section_1">Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
-        </div><!-- develop -->
-
-        <div class="ceo">
-            <img src="#" alt="Иконка CEO-Оптимизация" class="icon_section_1">
+        </div>
+        <div class="ceo"> <img src="#" alt="Иконка CEO-Оптимизация" class="icon_section_1">
             <p class="chapter_section_1">CEO-Оптимизация</p>
             <p class="text_section_1">Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
-        </div><!-- ceo -->
-
-        <div class="market">
-            <img src="#" alt="Иконка Маркетинг" class="icon_section_1">
+        </div>
+        <div class="market"> <img src="#" alt="Иконка Маркетинг" class="icon_section_1">
             <p class="chapter_section_1">Маркетинг</p>
             <p class="text_section_1">Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
-        </div><!-- market -->
-    </div><!-- section_1 -->
-
+        </div>
+    </div>
     <div class="section_2">
         <h2>Кейсы</h2>
-        <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed Dapibus leo nec ornare diamcoccodo nibh ante facilisis.</p>
-        <img src="#" alt="скриншот" class="screenshot">
+        <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed Dapibus leo nec ornare diamcoccodo nibh ante facilisis.</p> <img src="#" alt="скриншот" class="screenshot">
         <div class="website">
             <p class="client">Client:</p>
             <p class="company">Какая-то компания</p>
@@ -94,25 +71,21 @@
             <form action="#" target="_blank">
                 <button>Visit live site</button>
             </form>
-        </div><!-- website -->
-    </div><!-- section_2 -->
-
-    <div class="section_3">
-        <h2>Расчет стоимости</h2>
-        <p class="calculation">Тип сайта</p>
-        <select name="type">
+        </div>
+        <div class="section_3">
+            <h2>Расчет стоимости</h2>
+            <p class="calculation">Тип сайта</p>
+            <select name="type">
                 <option value="opt1">Option 1</option>
                 <option value="opt2">Option 2</option>
                 <option value="opt3">Option 3</option>
             </select>
-
             <p class="calculation">Дизайн</p>
             <select name="type">
                 <option value="opt1">Option 1</option>
                 <option value="opt2">Option 2</option>
                 <option value="opt3">Option 3</option>
             </select>
-
             <p class="calculation">Адаптивность</p>
             <select name="type">
                 <option value="opt1">Option 1</option>
@@ -123,92 +96,61 @@
                 <p>Сроки</p>
                 <p>Стоимость</p>
             </div>
-    </div><!-- section_3 -->
-
-    <div class="section_4">
-            <img src="#" alt="background_3">
+        </div>
+        <div class="section_4"> <img src="#" alt="background_3">
             <h2>Немного статистики</h2>
-
-            <div class="clients">
-                <img src="#" alt="Иконка Смайл" class="icon_section_4">
+            <div class="clients"> <img src="#" alt="Иконка Смайл" class="icon_section_4">
                 <p class="chapter_section_4">120</p>
                 <p class="text_section_1">Счастливых клиентов</p>
             </div>
-
-            <div class="time">
-                <img src="#" alt="Иконка Тэг Закрывающийся" class="icon_section_4">
+            <div class="time"> <img src="#" alt="Иконка Тэг Закрывающийся" class="icon_section_4">
                 <p class="chapter_section_4">4,600</p>
                 <p class="text_section_1">Часов работы</p>
             </div>
-
-            <div class="projects">
-                <img src="#" alt="Иконка Галочка" class="icon_section_4">
+            <div class="projects"> <img src="#" alt="Иконка Галочка" class="icon_section_4">
                 <p class="chapter_section_4">340</p>
                 <p class="text_section_1">Проектов завершено</p>
             </div>
-
-            <div class="prize">
-                <img src="#" alt="Иконка Кубок" class="icon_section_4">
+            <div class="prize"> <img src="#" alt="Иконка Кубок" class="icon_section_4">
                 <p class="chapter_section_4">23</p>
                 <p class="text_section_1">Наград получено</p>
             </div>
-    </div><!-- section_4 -->
-
-    <div class="section_5">
-            <div class="comment_1">
-                <img src="#" alt="Фото">
+        </div>
+        <div class="section_5">
+            <div class="comment_1"> <img src="#" alt="Фото">
                 <p class="text_comment">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at duis sed dapidus leo nec ornare diam.</p>
                 <p class="name_comment">Михаил, Ген директор ПАО “Газпром”.</p>
             </div>
         </div>
-    </div><!-- section_5 -->
-
-        <footer>
-            <img src="#" alt="background_footer">
+        <footer> <img src="#" alt="background_footer">
             <h2>Расчет стоимости</h2>
             <p class="text_contacts">Lorem ipsum dolor sit amet, consectetur adipiscing elit duis sed dapibus leo nec ornare diamcoccodo </p>
-            <div>
-                <img src="#" alt="Значок Геолокация">
-                <p class="address">Санкт-Петербург<br>Невский проспект 11</p>
+            <div> <img src="#" alt="Значок Геолокация">
+                <p class="address">Санкт-Петербург
+                    <br>Невский проспект 11</p>
             </div>
-
-            <div>
-                <img src="#" alt="Значок Почта">
+            <div> <img src="#" alt="Значок Почта">
                 <p class="mail"><a href="mailto:info@companyname.com">info@companyname.com</a></p>
             </div>
-
-            <div>
-                <img src="#" alt="Значок Телефон">
-                <p class="tel"><a href="tel:+7 999 999-99-99">+7 999 999-99-99</a></p>
+            <div> <img src="#" alt="Значок Телефон">
+                <p class="tel"><a href="tel:+79999999999">+7 999 999-99-99</a></p>
             </div>
-
             <p class="message">Оставьте мне сообщение</p>
-
             <form action="#">
                 <input type="text" placeholder="Имя">
                 <input type="email" placeholder="Email">
-                <textarea placeholder="Сообщение"></textarea>
-                <button>
-                    Отправить
-                </button>
+                <input type="text" placeholder="Сообщение">
+                <button> Отправить </button>
             </form>
-
-            <div>
-                <img src="#" alt="Иконка FB">
-                <img src="#" alt="Иконка твитер">
-                <img src="#" alt="Иконка мяч">
-                <img src="#" alt="Иконка киса">
-                <img src="#" alt="Иконка инстаграм">
-                <img src="#" alt="Иконка in">
-            </div>
-
-            <div class="map"> <!-- JS -->
+            <div> <img src="#" alt="Иконка FB"> <img src="#" alt="Иконка твитер"> <img src="#" alt="Иконка мяч"> <img src="#" alt="Иконка киса"> <img src="#" alt="Иконка инстаграм"> <img src="#" alt="Иконка in"> </div>
+            <div class="map">
+                <!-- JS -->
                 <p>I'm here</p>
             </div>
-
             <div class="copyright">
                 <p>Copyright © 2021 Антон Полищук. Design by Web</p>
             </div>
         </footer>
 </body>
+
 </html>
