--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
     <meta name="author" content="Anton">
     <meta name="robots" content='all'>
     <title>Антон Полищук - Веб-разработчик</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -28,14 +30,15 @@
     <div class="main">
         <div class="title_container">
             <h1>Привет <br> Я Антон Полищук</h1>
-            <h4>Фулл стэк веб-разработчик</h4>
+            <h4>Фулл стек веб-разработчик</h4>
             <input type="submit" value="Обо мне">
-            <input type="submit" value="Мои работы"> </div> <img src="#" alt="фон1" class="background_1"> </div>
+            <input type="submit" value="Мои работы"> </div>  </div>
     <div class="about_me">
-        <h2>Обо мне</h2> <img src="#" alt="avatar" class="avatar">
+        <h2>Обо мне</h2>
+        <div class="avatar"></div>
         <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh.</p>
         <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh.</p>
-        <div> <img src="#" alt="icon_download">
+        <div>
             <p class="download"><a href="#" download>Скачать резюме</a></p>
         </div>
     </div>
