--- a/src/index.html
+++ b/src/index.html
@@ -42,118 +42,135 @@
             <p class="download"><a href="#" download>Скачать резюме</a></p>
         </div>
     </div>
-    <div class="section_1"> <img src="#" alt="background_2">
+    <div class="section_1">
         <h2>Что я умею</h2>
-        <div class="web"> <img src="#" alt="Иконка Веб-дизайн" class="icon_section_1">
+        <img src="../src/img/cherta_zagalovka.jpg" alt="Черта заголовка" class="cherta_zagalovka">
+        <div class="web"> <img src="../src/img/nout.svg" alt="Иконка Веб-дизайн" class="icon_section_1">
             <p class="chapter_section_1">Веб-дизайн</p>
             <p class="text_section_1">Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
         </div>
-        <div class="develop"> <img src="#" alt="Иконка Разработка" class="icon_section_1">
+        <div class="develop"> <img src="../src/img/znak.svg" alt="Иконка Разработка" class="icon_section_1">
             <p class="chapter_section_1">Разработка</p>
             <p class="text_section_1">Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
         </div>
-        <div class="ceo"> <img src="#" alt="Иконка CEO-Оптимизация" class="icon_section_1">
+        <div class="ceo"> <img src="../src/img/raketa.svg" alt="Иконка CEO-Оптимизация" class="icon_section_1">
             <p class="chapter_section_1">CEO-Оптимизация</p>
             <p class="text_section_1">Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
         </div>
-        <div class="market"> <img src="#" alt="Иконка Маркетинг" class="icon_section_1">
+        <div class="market"> <img src="../src/img/grammofon.svg" alt="Иконка Маркетинг" class="icon_section_1">
             <p class="chapter_section_1">Маркетинг</p>
             <p class="text_section_1">Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
         </div>
     </div>
+
     <div class="section_2">
         <h2>Кейсы</h2>
-        <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed Dapibus leo nec ornare diamcoccodo nibh ante facilisis.</p> <img src="#" alt="скриншот" class="screenshot">
+        <img src="../src/img/cherta_zagalovka.jpg" alt="Черта заголовка" class="cherta_zagalovka">
+        <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed Dapibus leo nec ornare diamcoccodo nibh ante facilisis.</p> <img src="../src/img/screenshot.png" alt="скриншот" class="screenshot">
         <div class="website">
-            <p class="client">Client:</p>
-            <p class="company">Какая-то компания</p>
-            <p class="client">Website:</p>
-            <p class="company">http://www.somedomain.com</p>
-            <p class="name_project">Название проекта</p>
-            <p class="about_project">Lorem ipsum dolor sit amet, consectetur adipiscing elit., sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+            <div class="website1">
+                <p class="client">Client:</p>
+                <p class="company">Какая-то компания</p>
+                <p class="client">Website:</p>
+                <p class="company">http://www.somedomain.com</p>
+            </div>
+            <div class="website2">
+                <p class="name-project">Название проекта</p>
+                <p class="about-project">Lorem ipsum dolor sit amet, consectetur adipiscing elit., sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+            </div>
             <form action="#" target="_blank">
                 <button>Visit live site</button>
             </form>
         </div>
-        <div class="section_3">
-            <h2>Расчет стоимости</h2>
-            <p class="calculation">Тип сайта</p>
-            <select name="type">
-                <option value="opt1">Option 1</option>
-                <option value="opt2">Option 2</option>
-                <option value="opt3">Option 3</option>
-            </select>
-            <p class="calculation">Дизайн</p>
-            <select name="type">
-                <option value="opt1">Option 1</option>
-                <option value="opt2">Option 2</option>
-                <option value="opt3">Option 3</option>
-            </select>
-            <p class="calculation">Адаптивность</p>
-            <select name="type">
-                <option value="opt1">Option 1</option>
-                <option value="opt2">Option 2</option>
-                <option value="opt3">Option 3</option>
-            </select>
-            <div class="term_cost">
-                <p>Сроки</p>
-                <p>Стоимость</p>
-            </div>
-        </div>
-        <div class="section_4"> <img src="#" alt="background_3">
-            <h2>Немного статистики</h2>
-            <div class="clients"> <img src="#" alt="Иконка Смайл" class="icon_section_4">
-                <p class="chapter_section_4">120</p>
-                <p class="text_section_1">Счастливых клиентов</p>
-            </div>
-            <div class="time"> <img src="#" alt="Иконка Тэг Закрывающийся" class="icon_section_4">
-                <p class="chapter_section_4">4,600</p>
-                <p class="text_section_1">Часов работы</p>
-            </div>
-            <div class="projects"> <img src="#" alt="Иконка Галочка" class="icon_section_4">
-                <p class="chapter_section_4">340</p>
-                <p class="text_section_1">Проектов завершено</p>
-            </div>
-            <div class="prize"> <img src="#" alt="Иконка Кубок" class="icon_section_4">
-                <p class="chapter_section_4">23</p>
-                <p class="text_section_1">Наград получено</p>
-            </div>
-        </div>
-        <div class="section_5">
-            <div class="comment_1"> <img src="#" alt="Фото">
-                <p class="text_comment">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at duis sed dapidus leo nec ornare diam.</p>
-                <p class="name_comment">Михаил, Ген директор ПАО “Газпром”.</p>
-            </div>
-        </div>
-        <footer> <img src="#" alt="background_footer">
-            <h2>Расчет стоимости</h2>
-            <p class="text_contacts">Lorem ipsum dolor sit amet, consectetur adipiscing elit duis sed dapibus leo nec ornare diamcoccodo </p>
-            <div> <img src="#" alt="Значок Геолокация">
-                <p class="address">Санкт-Петербург
-                    <br>Невский проспект 11</p>
-            </div>
-            <div> <img src="#" alt="Значок Почта">
-                <p class="mail"><a href="mailto:info@companyname.com">info@companyname.com</a></p>
-            </div>
-            <div> <img src="#" alt="Значок Телефон">
-                <p class="tel"><a href="tel:+79999999999">+7 999 999-99-99</a></p>
-            </div>
-            <p class="message">Оставьте мне сообщение</p>
-            <form action="#">
-                <input type="text" placeholder="Имя">
-                <input type="email" placeholder="Email">
-                <input type="text" placeholder="Сообщение">
-                <button> Отправить </button>
-            </form>
-            <div> <img src="#" alt="Иконка FB"> <img src="#" alt="Иконка твитер"> <img src="#" alt="Иконка мяч"> <img src="#" alt="Иконка киса"> <img src="#" alt="Иконка инстаграм"> <img src="#" alt="Иконка in"> </div>
-            <div class="map">
-                <!-- JS -->
-                <p>I'm here</p>
-            </div>
-            <div class="copyright">
-                <p>Copyright © 2021 Антон Полищук. Design by Web</p>
-            </div>
-        </footer>
-</body>
+    </div>
 
+    <div class="section_3">
+        <h2>Расчет стоимости</h2>
+        <p class="calculation">Тип сайта</p>
+        <select name="type">
+            <option selected disabled hidden>Выберите пункт...</option>
+            <option value="opt1">Option 1</option>
+            <option value="opt2">Option 2</option>
+            <option value="opt3">Option 3</option>
+        </select>
+        <p class="calculation">Дизайн</p>
+        <select name="type">
+            <option selected disabled hidden>Выберите пункт...</option>
+            <option value="opt1">Option 1</option>
+            <option value="opt2">Option 2</option>
+            <option value="opt3">Option 3</option>
+        </select>
+        <p class="calculation">Адаптивность</p>
+        <select name="type">
+            <option selected disabled hidden>Выберите пункт...</option>
+            <option value="opt1">Option 1</option>
+            <option value="opt2">Option 2</option>
+            <option value="opt3">Option 3</option>
+        </select>
+        <div class="term_cost">
+            <div class="cherta"></div>
+            <p>Сроки</p>
+            <p>Стоимость</p>
+        </div>
+    </div>
+
+    <div class="section_4"> <img src="#" alt="background_3">
+        <h2>Немного статистики</h2>
+        <div class="clients"> <img src="#" alt="Иконка Смайл" class="icon_section_4">
+            <p class="chapter_section_4">120</p>
+            <p class="text_section_1">Счастливых клиентов</p>
+        </div>
+        <div class="time"> <img src="#" alt="Иконка Тэг Закрывающийся" class="icon_section_4">
+            <p class="chapter_section_4">4,600</p>
+            <p class="text_section_1">Часов работы</p>
+        </div>
+        <div class="projects"> <img src="#" alt="Иконка Галочка" class="icon_section_4">
+            <p class="chapter_section_4">340</p>
+            <p class="text_section_1">Проектов завершено</p>
+        </div>
+        <div class="prize"> <img src="#" alt="Иконка Кубок" class="icon_section_4">
+            <p class="chapter_section_4">23</p>
+            <p class="text_section_1">Наград получено</p>
+        </div>
+    </div>
+
+    <div class="section_5">
+        <div class="comment_1"> <img src="#" alt="Фото">
+            <p class="text_comment">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at duis sed dapidus leo nec ornare diam.</p>
+            <p class="name_comment">Михаил, Ген директор ПАО “Газпром”.</p>
+        </div>
+    </div>
+
+    <footer> <img src="#" alt="background_footer">
+        <h2>Расчет стоимости</h2>
+        <p class="text_contacts">Lorem ipsum dolor sit amet, consectetur adipiscing elit duis sed dapibus leo nec ornare diamcoccodo </p>
+        <div> <img src="#" alt="Значок Геолокация">
+            <p class="address">Санкт-Петербург
+                    <br>Невский проспект 11</p>
+        </div>
+        <div> <img src="#" alt="Значок Почта">
+            <p class="mail"><a href="mailto:info@companyname.com">info@companyname.com</a></p>
+        </div>
+        <div> <img src="#" alt="Значок Телефон">
+            <p class="tel"><a href="tel:+79999999999">+7 999 999-99-99</a></p>
+        </div>
+        <p class="message">Оставьте мне сообщение</p>
+        <form action="#">
+            <input type="text" placeholder="Имя">
+            <input type="email" placeholder="Email">
+            <input type="text" placeholder="Сообщение">
+            <button> Отправить </button>
+        </form>
+        <div> <img src="#" alt="Иконка FB"> <img src="#" alt="Иконка твитер"> <img src="#" alt="Иконка мяч"> <img src="#" alt="Иконка киса"> <img src="#" alt="Иконка инстаграм"> <img src="#" alt="Иконка in">
+        </div>
+        <div class="map">
+            <!-- JS -->
+            <p>I'm here</p>
+        </div>
+        <div class="copyright">
+            <p>Copyright © 2021 Антон Полищук. Design by Web</p>
+        </div>
+    </footer>
+
+</body>
 </html>
