Обновил css и html
доделал до конца стили, добавил картинки в html

--- a/src/index.html
+++ b/src/index.html
@@ -114,55 +114,65 @@
         </div>
     </div>
 
-    <div class="section_4"> <img src="#" alt="background_3">
+    <div class="section_4">
         <h2>Немного статистики</h2>
-        <div class="clients"> <img src="#" alt="Иконка Смайл" class="icon_section_4">
+        <img src="../src/img/cherta_zagalovka.jpg" alt="Черта заголовка" class="cherta_zagalovka">
+        <div class="clients"> <img src="../src/img/smail.png" alt="Иконка Смайл" class="icon_section_4">
             <p class="chapter_section_4">120</p>
-            <p class="text_section_1">Счастливых клиентов</p>
+            <p class="text_section_4">Счастливых клиентов</p>
         </div>
-        <div class="time"> <img src="#" alt="Иконка Тэг Закрывающийся" class="icon_section_4">
+        <div class="time"> <img src="../src/img/skobki.png" alt="Иконка Тэг Закрывающийся" class="icon_section_4">
             <p class="chapter_section_4">4,600</p>
-            <p class="text_section_1">Часов работы</p>
+            <p class="text_section_4">Часов работы</p>
         </div>
-        <div class="projects"> <img src="#" alt="Иконка Галочка" class="icon_section_4">
+        <div class="projects"> <img src="../src/img/galochka.png" alt="Иконка Галочка" class="icon_section_4">
             <p class="chapter_section_4">340</p>
-            <p class="text_section_1">Проектов завершено</p>
+            <p class="text_section_4">Проектов завершено</p>
         </div>
-        <div class="prize"> <img src="#" alt="Иконка Кубок" class="icon_section_4">
+        <div class="prize"> <img src="../src/img/kubok.png" alt="Иконка Кубок" class="icon_section_4">
             <p class="chapter_section_4">23</p>
-            <p class="text_section_1">Наград получено</p>
+            <p class="text_section_4">Наград получено</p>
         </div>
     </div>
 
     <div class="section_5">
-        <div class="comment_1"> <img src="#" alt="Фото">
+        <h2>Отзывы</h2>
+        <img src="../src/img/cherta_zagalovka.jpg" alt="Черта заголовка" class="cherta_zagalovka">
+        <div class="comment_1"> <img src="../src/img/fotka.jpg" alt="Фото">
             <p class="text_comment">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at duis sed dapidus leo nec ornare diam.</p>
-            <p class="name_comment">Михаил, Ген директор ПАО “Газпром”.</p>
+            <p class="name_comment"><span>Михаил,</span> Ген директор ПАО “Газпром”.</p>
         </div>
     </div>
 
-    <footer> <img src="#" alt="background_footer">
-        <h2>Расчет стоимости</h2>
-        <p class="text_contacts">Lorem ipsum dolor sit amet, consectetur adipiscing elit duis sed dapibus leo nec ornare diamcoccodo </p>
-        <div> <img src="#" alt="Значок Геолокация">
-            <p class="address">Санкт-Петербург
-                    <br>Невский проспект 11</p>
+    <footer>
+    <div class="my_contacts">
+        <h2>Мои контакты</h2>
+        <img src="../src/img/cherta_zagalovka.jpg" alt="Черта заголовка" class="cherta_zagalovka">
+        <p class="text_contacts">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit duis sed dapibus leo nec ornare diamcoccodo
+        </p>
+        <div class="geo">
+            <img src="../src/img/geo.png" alt="Значок Геолокация">
+            <p class="address">Санкт-Петербург<br>Невский проспект 11</p>
         </div>
-        <div> <img src="#" alt="Значок Почта">
+        <div class="convert">
+            <img src="../src/img/convert.png" alt="Значок Почта">
             <p class="mail"><a href="mailto:info@companyname.com">info@companyname.com</a></p>
         </div>
-        <div> <img src="#" alt="Значок Телефон">
+        <div class="truba">
+            <img src="../src/img/truba.png" alt="Значок Телефон">
             <p class="tel"><a href="tel:+79999999999">+7 999 999-99-99</a></p>
         </div>
         <p class="message">Оставьте мне сообщение</p>
         <form action="#">
-            <input type="text" placeholder="Имя">
-            <input type="email" placeholder="Email">
-            <input type="text" placeholder="Сообщение">
+            <input type="text" placeholder="Имя" class="name">
+            <input type="email" placeholder="Email" class="email"><br>
+            <input type="text" placeholder="Сообщение" class="text"><br>
             <button> Отправить </button>
         </form>
-        <div> <img src="#" alt="Иконка FB"> <img src="#" alt="Иконка твитер"> <img src="#" alt="Иконка мяч"> <img src="#" alt="Иконка киса"> <img src="#" alt="Иконка инстаграм"> <img src="#" alt="Иконка in">
+        <div class="icon"> <img src="../src/img/fb.png" alt="Иконка FB"> <img src="../src/img/twiter.png" alt="Иконка твитер"> <img src="../src/img/ball.png" alt="Иконка мяч"> <img src="../src/img/cat.png" alt="Иконка киса"> <img src="../src/img/inst.png" alt="Иконка инстаграм"> <img src="../src/img/in.png" alt="Иконка in">
         </div>
+    </div>
         <div class="map">
             <!-- JS -->
             <p>I'm here</p>
