Обновил html и css
Изменил svg изображения (xlink:href="data:image/png;base64). Поменял инпут на textarea и подредактировал css. Отредактировал изображение fon_3 в фотошопе (убрал иконки).

--- a/src/index.html
+++ b/src/index.html
@@ -167,7 +167,7 @@
         <form action="#">
             <input type="text" placeholder="Имя" class="name">
             <input type="email" placeholder="Email" class="email"><br>
-            <input type="text" placeholder="Сообщение" class="text"><br>
+            <textarea>Сообщение</textarea><br>
             <button> Отправить </button>
         </form>
         <div class="icon"> <img src="../src/img/fb.png" alt="Иконка FB"> <img src="../src/img/twiter.png" alt="Иконка твитер"> <img src="../src/img/ball.png" alt="Иконка мяч"> <img src="../src/img/cat.png" alt="Иконка киса"> <img src="../src/img/inst.png" alt="Иконка инстаграм"> <img src="../src/img/in.png" alt="Иконка in">
