Загрузчик, паралакс эффект, nav-fixed, анимация
Добавил загрузчик (скрипт в конце html). Добавил для background fixed (паралакс эффект) - "Немного статистики". Меню fixed. Добавил в css анимацию, псевдоэлементы и псевдоклассы.

--- a/src/index.html
+++ b/src/index.html
@@ -12,167 +12,182 @@
 </head>
 
 <body>
+    <div class="preloader">
+        <div class="preloader__row">
+            <div class="preloader__item"></div>
+            <div class="preloader__item"></div>
+        </div>
+    </div>
     <header>
         <nav>
             <div class="logo">Антон Полищук</div>
             <div class="menu">
                 <ul>
-                    <li>Обо мне</li>
-                    <li>Услуги</li>
-                    <li>Кейсы</li>
-                    <li>Прайс</li>
-                    <li>Отзывы</li>
-                    <li>Контакты</li>
+                    <li><a href="#">Обо мне</a></li>
+                    <li><a href="#">Услуги</a></li>
+                    <li><a href="#">Кейсы</a></li>
+                    <li><a href="#">Прайс</a></li>
+                    <li><a href="#">Отзывы</a></li>
+                    <li><a href="#">Контакты</a></li>
                 </ul>
             </div>
         </nav>
     </header>
-    <div class="main">
-        <div class="title_container">
-            <h1>Привет <br> Я Антон Полищук</h1>
-            <h4>Фулл стек веб-разработчик</h4>
-            <input type="submit" value="Обо мне">
-            <input type="submit" value="Мои работы"> </div>  </div>
-    <div class="about_me">
-        <h2>Обо мне</h2>
-        <div class="avatar"></div>
-        <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh.</p>
-        <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh.</p>
-        <div>
-            <p class="download"><a href="#" download>Скачать резюме</a></p>
-        </div>
-    </div>
-    <div class="section_1">
-        <h2>Что я умею</h2>
-        <img src="../src/img/cherta_zagalovka.jpg" alt="Черта заголовка" class="cherta_zagalovka">
-        <div class="web"> <img src="../src/img/nout.svg" alt="Иконка Веб-дизайн" class="icon_section_1">
-            <p class="chapter_section_1">Веб-дизайн</p>
-            <p class="text_section_1">Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
-        </div>
-        <div class="develop"> <img src="../src/img/znak.svg" alt="Иконка Разработка" class="icon_section_1">
-            <p class="chapter_section_1">Разработка</p>
-            <p class="text_section_1">Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
-        </div>
-        <div class="ceo"> <img src="../src/img/raketa.svg" alt="Иконка CEO-Оптимизация" class="icon_section_1">
-            <p class="chapter_section_1">CEO-Оптимизация</p>
-            <p class="text_section_1">Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
-        </div>
-        <div class="market"> <img src="../src/img/grammofon.svg" alt="Иконка Маркетинг" class="icon_section_1">
-            <p class="chapter_section_1">Маркетинг</p>
-            <p class="text_section_1">Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
-        </div>
-    </div>
 
-    <div class="section_2">
-        <h2>Кейсы</h2>
-        <img src="../src/img/cherta_zagalovka.jpg" alt="Черта заголовка" class="cherta_zagalovka">
-        <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed Dapibus leo nec ornare diamcoccodo nibh ante facilisis.</p> <img src="../src/img/screenshot.png" alt="скриншот" class="screenshot">
-        <div class="website">
-            <div class="website1">
-                <p class="client">Client:</p>
-                <p class="company">Какая-то компания</p>
-                <p class="client">Website:</p>
-                <p class="company">http://www.somedomain.com</p>
+        <section class="main">
+            <div class="title_container">
+                <h1>Привет <br> Я Антон Полищук</h1>
+                <h4>Фулл стек веб-разработчик</h4>
+                <input type="button" value="Обо мне">
+                <input type="button" value="Мои работы">
             </div>
-            <div class="website2">
-                <p class="name-project">Название проекта</p>
-                <p class="about-project">Lorem ipsum dolor sit amet, consectetur adipiscing elit., sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        </section>
+        <div class="about_me">
+            <h2>Обо мне</h2>
+            <div class="avatar"></div>
+            <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh.</p>
+            <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh.</p>
+            <div>
+                <p class="download"><a href="#" download>Скачать резюме</a></p>
             </div>
-            <form action="#" target="_blank">
-                <button>Visit live site</button>
-            </form>
         </div>
-    </div>
+        <div class="section_1">
+            <h2>Что я умею</h2>
+            <img src="../src/img/cherta_zagalovka.jpg" alt="Черта заголовка" class="cherta_zagalovka">
+            <div class="web"> <img src="../src/img/nout.svg" alt="Иконка Веб-дизайн" class="icon_section_1">
+                <p class="chapter_section_1">Веб-дизайн</p>
+                <p class="text_section_1">Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
+            </div>
+            <div class="develop"> <img src="../src/img/znak.svg" alt="Иконка Разработка" class="icon_section_1">
+                <p class="chapter_section_1">Разработка</p>
+                <p class="text_section_1">Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
+            </div>
+            <div class="ceo"> <img src="../src/img/raketa.svg" alt="Иконка CEO-Оптимизация" class="icon_section_1">
+                <p class="chapter_section_1">CEO-Оптимизация</p>
+                <p class="text_section_1">Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
+            </div>
+            <div class="market"> <img src="../src/img/grammofon.svg" alt="Иконка Маркетинг" class="icon_section_1">
+                <p class="chapter_section_1">Маркетинг</p>
+                <p class="text_section_1">Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
+            </div>
+        </div>
 
-    <div class="section_3">
-        <h2>Расчет стоимости</h2>
-        <p class="calculation">Тип сайта</p>
-        <select name="type">
-            <option selected disabled hidden>Выберите пункт...</option>
-            <option value="opt1">Option 1</option>
-            <option value="opt2">Option 2</option>
-            <option value="opt3">Option 3</option>
-        </select>
-        <p class="calculation">Дизайн</p>
-        <select name="type">
-            <option selected disabled hidden>Выберите пункт...</option>
-            <option value="opt1">Option 1</option>
-            <option value="opt2">Option 2</option>
-            <option value="opt3">Option 3</option>
-        </select>
-        <p class="calculation">Адаптивность</p>
-        <select name="type">
-            <option selected disabled hidden>Выберите пункт...</option>
-            <option value="opt1">Option 1</option>
-            <option value="opt2">Option 2</option>
-            <option value="opt3">Option 3</option>
-        </select>
-        <div class="term_cost">
-            <div class="cherta"></div>
-            <p>Сроки</p>
-            <p>Стоимость</p>
+        <div class="section_2">
+            <h2>Кейсы</h2>
+            <img src="../src/img/cherta_zagalovka.jpg" alt="Черта заголовка" class="cherta_zagalovka">
+            <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed Dapibus leo nec ornare diamcoccodo nibh ante facilisis.</p> <img src="../src/img/screenshot.png" alt="скриншот" class="screenshot">
+            <div class="website">
+                <div class="website1">
+                    <p class="client">Client:</p>
+                    <p class="company">Какая-то компания</p>
+                    <p class="client">Website:</p>
+                    <p class="company">http://www.somedomain.com</p>
+                </div>
+                <div class="website2">
+                    <p class="name-project">Название проекта</p>
+                    <p class="about-project">Lorem ipsum dolor sit amet, consectetur adipiscing elit., sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                </div>
+                <form action="#" target="_blank">
+                    <button>Visit live site</button>
+                </form>
+            </div>
         </div>
-    </div>
 
-    <div class="section_4">
-        <h2>Немного статистики</h2>
-        <img src="../src/img/cherta_zagalovka.jpg" alt="Черта заголовка" class="cherta_zagalovka">
-        <div class="clients"> <img src="../src/img/smail.png" alt="Иконка Смайл" class="icon_section_4">
-            <p class="chapter_section_4">120</p>
-            <p class="text_section_4">Счастливых клиентов</p>
+        <div class="section_3">
+            <h2>Расчет стоимости</h2>
+            <p class="calculation">Тип сайта</p>
+            <select name="type">
+                <option selected disabled hidden>Выберите пункт...</option>
+                <option value="opt1">Option 1</option>
+                <option value="opt2">Option 2</option>
+                <option value="opt3">Option 3</option>
+            </select>
+            <p class="calculation">Дизайн</p>
+            <select name="type">
+                <option selected disabled hidden>Выберите пункт...</option>
+                <option value="opt1">Option 1</option>
+                <option value="opt2">Option 2</option>
+                <option value="opt3">Option 3</option>
+            </select>
+            <p class="calculation">Адаптивность</p>
+            <select name="type">
+                <option selected disabled hidden>Выберите пункт...</option>
+                <option value="opt1">Option 1</option>
+                <option value="opt2">Option 2</option>
+                <option value="opt3">Option 3</option>
+            </select>
+            <div class="term_cost">
+                <div class="cherta"></div>
+                <p>Сроки</p>
+                <p>Стоимость</p>
+            </div>
         </div>
-        <div class="time"> <img src="../src/img/skobki.png" alt="Иконка Тэг Закрывающийся" class="icon_section_4">
-            <p class="chapter_section_4">4,600</p>
-            <p class="text_section_4">Часов работы</p>
-        </div>
-        <div class="projects"> <img src="../src/img/galochka.png" alt="Иконка Галочка" class="icon_section_4">
-            <p class="chapter_section_4">340</p>
-            <p class="text_section_4">Проектов завершено</p>
-        </div>
-        <div class="prize"> <img src="../src/img/kubok.png" alt="Иконка Кубок" class="icon_section_4">
-            <p class="chapter_section_4">23</p>
-            <p class="text_section_4">Наград получено</p>
-        </div>
-    </div>
 
-    <div class="section_5">
-        <h2>Отзывы</h2>
-        <img src="../src/img/cherta_zagalovka.jpg" alt="Черта заголовка" class="cherta_zagalovka">
-        <div class="comment_1"> <img src="../src/img/fotka.jpg" alt="Фото">
-            <p class="text_comment">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at duis sed dapidus leo nec ornare diam.</p>
-            <p class="name_comment"><span>Михаил,</span> Ген директор ПАО “Газпром”.</p>
+        <div class="section_4">
+            <h2>Немного статистики</h2>
+            <img src="../src/img/cherta_zagalovka.jpg" alt="Черта заголовка" class="cherta_zagalovka">
+            <div class="clients"> <img src="../src/img/smail.png" alt="Иконка Смайл" class="icon_section_4">
+                <p class="chapter_section_4">120</p>
+                <p class="text_section_4">Счастливых клиентов</p>
+            </div>
+            <div class="time"> <img src="../src/img/skobki.png" alt="Иконка Тэг Закрывающийся" class="icon_section_4">
+                <p class="chapter_section_4">4,600</p>
+                <p class="text_section_4">Часов работы</p>
+            </div>
+            <div class="projects"> <img src="../src/img/galochka.png" alt="Иконка Галочка" class="icon_section_4">
+                <p class="chapter_section_4">340</p>
+                <p class="text_section_4">Проектов завершено</p>
+            </div>
+            <div class="prize"> <img src="../src/img/kubok.png" alt="Иконка Кубок" class="icon_section_4">
+                <p class="chapter_section_4">23</p>
+                <p class="text_section_4">Наград получено</p>
+            </div>
         </div>
-    </div>
+
+        <div class="section_5">
+            <h2>Отзывы</h2>
+            <img src="../src/img/cherta_zagalovka.jpg" alt="Черта заголовка" class="cherta_zagalovka">
+            <div class="comment_1"> <img src="../src/img/fotka.jpg" alt="Фото">
+                <p class="text_comment">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at duis sed dapidus leo nec ornare diam.</p>
+                <p class="name_comment"><span>Михаил,</span> Ген директор ПАО “Газпром”.</p>
+            </div>
+        </div>
 
     <footer>
-    <div class="my_contacts">
-        <h2>Мои контакты</h2>
-        <img src="../src/img/cherta_zagalovka.jpg" alt="Черта заголовка" class="cherta_zagalovka">
-        <p class="text_contacts">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit duis sed dapibus leo nec ornare diamcoccodo
-        </p>
-        <div class="geo">
-            <img src="../src/img/geo.png" alt="Значок Геолокация">
-            <p class="address">Санкт-Петербург<br>Невский проспект 11</p>
+        <div class="my_contacts">
+            <h2>Мои контакты</h2>
+            <img src="../src/img/cherta_zagalovka.jpg" alt="Черта заголовка" class="cherta_zagalovka">
+            <p class="text_contacts">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit duis sed dapibus leo nec ornare diamcoccodo
+            </p>
+            <div class="geo">
+                <img src="../src/img/geo.png" alt="Значок Геолокация">
+                <p class="address">Санкт-Петербург<br>Невский проспект 11</p>
+            </div>
+            <div class="convert">
+                <img src="../src/img/convert.png" alt="Значок Почта">
+                <p class="mail"><a href="mailto:info@companyname.com">info@companyname.com</a></p>
+            </div>
+            <div class="truba">
+                <img src="../src/img/truba.png" alt="Значок Телефон">
+                <p class="tel"><a href="tel:+79999999999">+7 999 999-99-99</a></p>
+            </div>
+            <p class="message">Оставьте мне сообщение</p>
+            <form action="#">
+                <input type="text" placeholder="Имя" class="name">
+                <input type="email" placeholder="Email" class="email"><br>
+                <textarea>Сообщение</textarea><br>
+                <button> Отправить </button>
+            </form>
+            <div class="icon">
+                <img src="../src/img/fb.png" alt="Иконка FB">
+                <img src="../src/img/twiter.png" alt="Иконка твитер">
+                <img src="../src/img/ball.png" alt="Иконка мяч">
+                <img src="../src/img/cat.png" alt="Иконка киса">
+                <img src="../src/img/inst.png" alt="Иконка инстаграм">
+                <img src="../src/img/in.png" alt="Иконка in">
+            </div>
         </div>
-        <div class="convert">
-            <img src="../src/img/convert.png" alt="Значок Почта">
-            <p class="mail"><a href="mailto:info@companyname.com">info@companyname.com</a></p>
-        </div>
-        <div class="truba">
-            <img src="../src/img/truba.png" alt="Значок Телефон">
-            <p class="tel"><a href="tel:+79999999999">+7 999 999-99-99</a></p>
-        </div>
-        <p class="message">Оставьте мне сообщение</p>
-        <form action="#">
-            <input type="text" placeholder="Имя" class="name">
-            <input type="email" placeholder="Email" class="email"><br>
-            <textarea>Сообщение</textarea><br>
-            <button> Отправить </button>
-        </form>
-        <div class="icon"> <img src="../src/img/fb.png" alt="Иконка FB"> <img src="../src/img/twiter.png" alt="Иконка твитер"> <img src="../src/img/ball.png" alt="Иконка мяч"> <img src="../src/img/cat.png" alt="Иконка киса"> <img src="../src/img/inst.png" alt="Иконка инстаграм"> <img src="../src/img/in.png" alt="Иконка in">
-        </div>
-    </div>
         <div class="map">
             <!-- JS -->
             <p>I'm here</p>
@@ -182,5 +197,14 @@
         </div>
     </footer>
 
-</body>
-</html>
+    <script>
+        window.onload = function () {
+            document.body.classList.add('loaded_hiding');
+            window.setTimeout(function () {
+                document.body.classList.add('loaded');
+                document.body.classList.remove('loaded_hiding');
+            }, 500);
+        }
+</script>
+
+</body></html>
